fix(width): Fix horizontal vw scrollbar

--- a/styles/component1.css
+++ b/styles/component1.css
@@ -1,6 +1,6 @@
 #component1 {
     background-color: rgba(44, 62, 80, 90%);
-    width: 100vw;
+    width: 100%;
     min-width: 1280px;
     height: 117px;
     display: grid;
