--- a/styles/component2.css
+++ b/styles/component2.css
@@ -1,5 +1,5 @@
 #component2 {
-    width: 100vw;
+    width: 100%;
     min-width: 1280px;
 
     display: grid;
