--- a/styles/component3.css
+++ b/styles/component3.css
@@ -1,5 +1,5 @@
 #component3 {
-    width: 100vw;
+    width: 100%;
     min-width: 1280px;
     height: 784px;
 
