--- a/styles/component4.css
+++ b/styles/component4.css
@@ -1,7 +1,7 @@
 #component4 {
     margin-top: 155px;
 
-    width: 100vw;
+    width: 100%;
     min-width: 1280px;
     height: 140px;
 
